--- a/blog3.html
+++ b/blog3.html
@@ -72,7 +72,7 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="SaaS.html" class="block-20" style="background-image: url('images/0.jpg');">
+              <a href="SaaS.html" class="block-20" style="background-image: url('images/Software-as-a-Service-SaaS-1.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -84,15 +84,15 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="Predictive-Advertising.html">Predictive Advertising là gì?</a></h3>
-                <p>Predictive Advertising sử dụng dữ liệu, trí tuệ nhân tạo và thuật toán thống kê để dự đoán các phản ứng và kết quả.</p>
+              	<h3 class="heading mb-3"><a href="SaaS.html">Tổng hợp cái nhìn toàn diện về SaaS - loại hình phần mềm đang dẫn đầu xu hướng công nghệ toàn cầu</a></h3>
+                <p>Xu hướng SaaS và điện toán đám mây đang là hai mô hình dẫn đầu thế giới công nghệ</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="Email-SMS.html" class="block-20" style="background-image: url('images/cdp-featured-image.jpg');">
+              <a href="Email-SMS.html" class="block-20" style="background-image: url('images/sms-va-email-800x420.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -104,15 +104,15 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="CDP.html">CDP là gì? Tìm hiểu về CDP</a></h3>
-                <p>CDP khác với cơ sở dữ liệu quan hệ khách hàng, nền tảng quản lý dữ liệu hoặc hầu hết các nền tảng tiếp thị vì nó được thiết kế đặc biệt làm vị trí trung tâm cho dữ liệu khách hàng</p>
+              	<h3 class="heading mb-3"><a href="Email-SMS.html">Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</a></h3>
+                <p>Email và SMS là các công cụ tương tác với người dùng được sử dụng rộng rãi nhất bởi gần như tất cả các doanh nghiệp</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="Data-Driven-Marketing.html" class="block-20" style="background-image: url('images/93959435_1567667523382283_4327101012948025344_n.jpg');">
+              <a href="Data-Driven-Marketing.html" class="block-20" style="background-image: url('images/Data-Driven-Marketing.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -124,8 +124,8 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="ung-dung-OTT.html">Ứng dụng OTT và tiềm năng phát triển tại Việt Nam</a></h3>
-                <p>OTT hay Over The Top là giải pháp cung cấp nội dung cho người sử dụng dựa trên nền tảng Internet.</p>
+              	<h3 class="heading mb-3"><a href="Data-Driven-Marketing.html">Data driven là gì? Xu hướng data-driven marketing và tự động hóa tiếp thị</a></h3>
+                <p>Thuật ngữ Data driven cũng trở nên phổ biến và được các doanh nghiệp ứng dụng trong hoạch định chiến lược</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -133,7 +133,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="Web-Analytics-Software.html" class="block-20" style="background-image: url('images/web-analytics2.png');">
+              <a href="Real-time-Marketing.html" class="block-20" style="background-image: url('images/2.gif');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -145,8 +145,8 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="Web-Analytics-Software.html">Web Analytics Software - điều mà các marketer cần phải biết</a></h3>
-                <p>Web Analytics Software là yếu tố cần phải xem xét và hiểu kỹ lưỡng để làm việc hiệu quả hơn.</p>
+              	<h3 class="heading mb-3"><a href="Real-time-Marketing.html">Real-time Marketing</a></h3>
+                <p>Real-time marketing đã ra đời, giúp cho các thương hiệu có thể chinh phục trái tim mọi khách hàng</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -165,8 +165,8 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="Data-Management-Platfrom-DMP.html">Digital Commerce Advertising Management Platforms</a></h3>
-                <p>Nếu bạn đang tìm cách để tự động và tối ưu hóa các chiến dịch quảng cáo thương mại điện tử thì các công cụ quản lý quảng cáo thương mại có thể dành cho bạn.</p>
+              	<h3 class="heading mb-3"><a href="Data-Management-Platfrom-DMP.html">Data Management Platform (DMP) giải pháp tối ưu cho việc quản lý dữ liệu</a></h3>
+                <p>DMP được viết tắt từ Data Management Platform (DMP) đây chính là nền tảng quản lý dữ liệu tập trung.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -259,8 +259,8 @@
               <ul>
                 <li><a href="#">&lt;</a></li>
                 <li><a href="blog.html">1</a></li>
-                <li class="active"><span>2</span></li>
-                <li><a href="blog3.html">3</a></li>
+                <li><a href="blog2.html">2</a></li>
+                <li class="active"><span>3</span></li>
 
                 <li><a href="#">&gt;</a></li>
               </ul>
