--- a/blog.html
+++ b/blog.html
@@ -261,6 +261,7 @@
                 <li><a href="#">&lt;</a></li>
                 <li class="active"><span>1</span></li>
                 <li><a href="blog2.html">2</a></li>
+                <li><a href="blog3.html">3</a></li>
 
                 <li><a href="#">&gt;</a></li>
               </ul>
