--- a/blog2.html
+++ b/blog2.html
@@ -173,7 +173,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="cdp-la-gi.html" class="block-20" style="background-image: url('images/ung-dung-big-data-digital-marketing.jpg');">
+              <a href="Sprinklr.html" class="block-20" style="background-image: url('images/Livechat1.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -185,8 +185,8 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="Big-Data-Marketing.html">Ứng dụng Big Data trong Marketing: Tại sao lại quan trọng?</a></h3>
-                <p>Big Data là một khái niệm không còn xa lạ và ngày càng được nhắc đến thường xuyên trong lĩnh vực Marketing. Nó đang dần trở thành nguồn tài nguyên giá trị hàng đầu trên thế giới.</p>
+              	<h3 class="heading mb-3"><a href="Sprinklr.html">Sprinklr công cụ quản lý mạng xã hội top đầu hiện nay</a></h3>
+                <p>Sprinklr là sự lựa chọn tuyệt vời cho những doanh nghiệp lớn hay các thương hiệu đã có chiến lược truyền thông cụ thể trên mạng xã hội.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
@@ -194,7 +194,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-            <a href="xu-huong-martech.html" class="block-20" style="background-image: url('images/Data-driven-decision-making-1.png');">
+            <a href="chat-bot.html" class="block-20" style="background-image: url('images/News-botbanhang-1-2457-1586136135.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -206,15 +206,15 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="tiep-thi-theo-huong-du-lieu.html">Tiếp thị theo hướng dữ liệu là gì và tại sao nó lại hiệu quả?</a></h3>
-                <p>Hành vi tiếp thị theo hướng dữ liệu đang trên đà trở thành “điều quan trọng tiếp theo” trong B2B. Điều đó tốt, vì nó hoạt động!</p>
+              	<h3 class="heading mb-3"><a href="chat-bot.html">Chatbot và ứng dụng thực tế trong kinh doanh</a></h3>
+                <p>Chatbot là một phần mềm trí tuệ nhân tạo (AI) có thể mô phỏng 01 cuộc trò chuyện với người dùng bằng ngôn ngữ tự nhiên thông qua các ứng dụng nhắn tin, trang web, ứng dụng di động hoặc qua điện thoại.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="martech-covid-19.html" class="block-20" style="background-image: url('images/marketing_technology_landscape_2011-761x600.jpeg');">
+              <a href="long-trung-thanh.html" class="block-20" style="background-image: url('images/AI_850x510.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -226,15 +226,15 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="5-buoc-dieu-huong-boi-canh-cong-nghe-phuc-tap.html">MarTech Landscape - 5 bước điều hướng bối cảnh công nghệ phức tạp</a></h3>
-                <p>Người đóng góp Ryan Phelan chia sẻ quy trình từng bước để xác định các nhà cung cấp công nghệ phù hợp nhất với nhu cầu của công ty bạn.</p>
+              	<h3 class="heading mb-3"><a href="long-trung-thanh.html">4 cách để cải thiện lòng trung thành của khách hàng với AI</a></h3>
+                <p>Trí tuệ nhân tạo (AI) đang là một chủ đề siêu hot hiện nay trong lĩnh vực marketing.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="martech-la-gi.html" class="block-20" style="background-image: url('images/VR1.png');">
+              <a href="Martech-lanscape-xr-la-gi.html" class="block-20" style="background-image: url('images/VR1.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -246,7 +246,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="https://martechzonez.github.io/Martech-lanscape-xr-la-gi.html">MarTech Landscape: XR là gì?</a></h3>
+              	<h3 class="heading mb-3"><a href="Martech-lanscape-xr-la-gi.html">MarTech Landscape: XR là gì?</a></h3>
                 <p>Thực tế ảo mở rộng (XR) đang được ưa chuộng cũng như tìm hiểu một các rầm rộ sau sự phát triển của công nghệ thực tế ảo (VR), thực tế ảo tăng cường (AR) và thực thế hỗn hợp (MR) thì. Vậy XR là gì trong Martech Lanscape? </p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
