--- a/blog3.html
+++ b/blog3.html
@@ -173,7 +173,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="cdp-la-gi.html" class="block-20" style="background-image: url('images/ung-dung-big-data-digital-marketing.jpg');">
+              <a href="Big-Data-Marketing.html" class="block-20" style="background-image: url('images/ung-dung-big-data-digital-marketing.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -194,7 +194,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-            <a href="xu-huong-martech.html" class="block-20" style="background-image: url('images/Data-driven-decision-making-1.png');">
+            <a href="tiep-thi-theo-huong-du-lieu.html" class="block-20" style="background-image: url('images/Data-driven-decision-making-1.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -214,7 +214,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="martech-covid-19.html" class="block-20" style="background-image: url('images/marketing_technology_landscape_2011-761x600.jpeg');">
+              <a href="5-buoc-dieu-huong-boi-canh-cong-nghe-phuc-tap.html" class="block-20" style="background-image: url('images/marketing_technology_landscape_2011-761x600.jpeg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -234,7 +234,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="martech-la-gi.html" class="block-20" style="background-image: url('images/VR1.png');">
+              <a href="Martech-lanscape-xr-la-gi.html" class="block-20" style="background-image: url('images/VR1.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -246,7 +246,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="https://martechzonez.github.io/Martech-lanscape-xr-la-gi.html">MarTech Landscape: XR là gì?</a></h3>
+              	<h3 class="heading mb-3"><a href="Martech-lanscape-xr-la-gi.html">MarTech Landscape: XR là gì?</a></h3>
                 <p>Thực tế ảo mở rộng (XR) đang được ưa chuộng cũng như tìm hiểu một các rầm rộ sau sự phát triển của công nghệ thực tế ảo (VR), thực tế ảo tăng cường (AR) và thực thế hỗn hợp (MR) thì. Vậy XR là gì trong Martech Lanscape? </p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
